--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.21.37",
+    "gatsby-cli": "^2.12.36",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
